# RacingPlugin

./: .gitignore  CMakeLists.txt  README.md  appveyor.yml
cmake/: PluginConfigure.cmake  PluginPackage.cmake  version.h.in
cmake/in-files/: version.h.in
inc/: racing_dialog.h  racing_dialogbase.h  racing_gauge.h  racing_graphics.h  racing_icons.h  racing_plugin.h  racing_settings.h  racing_settingsbase.h  racing_toolbox.h  racing_toolboxbase.h  racing_window.h  racing_windowbase.h
manual/: antora.yml  site.yml
manual/modules/ROOT/pages/: index.adoc
manual/race-start/: site.yml
src/: racing_dialog.cpp  racing_dialogbase.cpp  racing_gauge.cpp  racing_icons.cpp  racing_plugin.cpp  racing_settings.cpp  racing_settingsbase.cpp  racing_toolbox.cpp  racing_toolboxbase.cpp  racing_window.cpp  racing_windowbase.cpp
